syntax = "proto3";
package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
  string date_created = 5;
}
message CreateBlogRequest{
  Blog blog = 1; // the id of the blog is not important
}
message CreateBlogResponse {
  Blog blog = 1; // the id of the created blog should be the one in mongo DB
}

service BlogService{
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
}